--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         }
 
         .category-link:hover {
-            color: var(--text-primary);
+            color: var(--accent);
             background-color: rgba(255, 45, 117, 0.1);
             border-color: var(--accent);
         }
@@ -297,6 +297,7 @@
         }
 
         html[data-theme="light"] .category-link.active {
+            background-color: var(--accent);
             color: white;
         }
 
